--- a/index.html
+++ b/index.html
@@ -22,16 +22,18 @@
             </div>
             <div class="right-header">
                 <h1 class="name">
-                    Hi, I'm <span>Solano Milan Diaz.</span>
+                    Hi, I'm <span>Yusuf Muhammad</span>
                     A Web Developer.
                 </h1>
                 <p>
-                    I'm a Web Developer, I love to create beautiful and functional websites.
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, libero?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque blanditiis sed aut!
+                    As a passionate Software Engineer with experience in Software Engineering, 
+                    I enjoy implementing light and scalable solutions using the best Agile practices 
+                    for the satisfaction I get by overcoming challenges. 
+                    I am very ﬂexible with different technologies, 
+                    so I can learn and adapt to new environments quickly and build solutions around them.
                 </p>
                 <div class="btn-con">
-                    <a href="" class="main-btn">
+                    <a href="/images/CV.pdf" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
