adding profile and social midea links

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="left-header">
                 <div class="h-shape"></div>
                 <div class="image">
-                    <!-- <img src="img/hero.png" alt=""> -->
+                    <img src="images/yusuf.jpeg" alt="">
                 </div>
             </div>
             <div class="right-header">
@@ -200,7 +200,7 @@
                         <img src="images/proj1.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Github Repo.</h3>
+                        <h3>&#169; Decagon Accessified.</h3>
                         <div class="icons">
                             <a href="https://github.com/yusufAnka/Accessified.git" class="icon">
                                 <i class="fab fa-github"></i>
@@ -214,7 +214,7 @@
                         <img src="images/proj2.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Github Repo</h3>
+                        <h3>&#169; Decagon Score Card</h3>
                         <div class="icons">
                             <a href="https://astonishing-souffle-b0fb04.netlify.app/login" class="icon">
                                 <i class="fab fa-github"></i>
@@ -227,7 +227,7 @@
                         <img src="images/proj4.png" alt="">
                     </div>
                     <div class="hover-items">
-                        <h3>Project Source</h3>
+                        <h3>&#169;T.M.B Catalog </h3>
                         <div class="icons">
                             <a href="https://github.com/yusufAnka/TMB-Frontend" class="icon">
                                 <i class="fab fa-github"></i>
@@ -242,7 +242,7 @@
                     <div class="hover-items">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" class="icon">
+                            <a href="https://github.com/yusufAnka/customer_management_sytem" class="icon">
                                 <i class="fab fa-github"></i>
                             </a>
 
